# cadforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  cadforge.sh  cadforge.toml  pyproject.toml
cadforge/: __init__.py  __main__.py  chat.py  cli.py  compiler.py  engine.py  exporter.py  manifest.py  mcp_server.py  server.py  watcher.py
project/: __init__.py  build.py  config.py  helpers.py
project/exterior/: finishing.py  roofs.py  windows.py
project/houses/: guest_house.py  main_house.py
project/interior/: furniture.py  walls.py
project/pdf/: floorplans.py
project/site/: ground.py  landscape.py
tests/: test_compiler.py
viewer/: index.html  index.html.bak  package-lock.json  package.json  vite.config.ts
viewer/src/: App.css  App.tsx
viewer/src/components/: ChatPanel.css  ChatPanel.tsx  ClipPanel.css  ClipPanel.tsx  CompassRose.tsx  ExportPanel.css  ExportPanel.tsx  FloorPlanMode.css  FloorPlanMode.tsx  InfoPanel.tsx  InspectorPanel.css  InspectorPanel.tsx  KeyboardHelp.css  KeyboardHelp.tsx  LayerPanel.css  LayerPanel.tsx  LogPanel.tsx  MeasureTool.css  MeasureTool.tsx  Minimap.css  Minimap.tsx  ModelLoader.tsx  RoomLabels.css  RoomLabels.tsx  Scene.tsx  SceneExporter.tsx  ScreenshotCapture.tsx  StatusBar.tsx  SunLight.tsx  SunMarker.tsx  SunPanel.tsx  Toolbar.css  Toolbar.tsx  ToolbarNew.css  ToolbarNew.tsx
viewer/src/hooks/: useFlyControls.ts  useKeyboard.ts  useWebSocket.ts
viewer/src/lib/: solarPosition.ts
viewer/src/store/: useStore.ts
